[gd_scene load_steps=8 format=3 uid="uid://bidwu6pvfcasl"]

[ext_resource type="Script" uid="uid://c5os2fgtf1upq" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="PackedScene" uid="uid://d0aj0u6tpefpb" path="res://scenes/interactable/interact_detector._scenetscn.tscn" id="2_dovo2"]
[ext_resource type="Script" uid="uid://ya240urtqqhp" path="res://scripts/dialogue/dialogue/DialogueNode.gd" id="3_gmlin"]
[ext_resource type="Script" path="res://scenes/player/main_menu.gd" id="3_lvxji"]
[ext_resource type="PackedScene" uid="uid://cdulne3g8vx5r" path="res://scenes/crosshair/CrosshairNode.tscn" id="3_p47bc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dovo2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dovo2"]

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 4
script = ExtResource("1_8afob")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dovo2")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.67823935, -0.37198505)

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.035546303, -0.040180802)

[node name="InteractDetector" parent="head" instance=ExtResource("2_dovo2")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, -0.037, -0.1)
enable_show_name = true

[node name="CrosshairNode" parent="head" node_paths=PackedStringArray("interactable_detector_reference") instance=ExtResource("3_p47bc")]
interactable_detector_reference = NodePath("../InteractDetector")

[node name="ground_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.88001686, 0)

[node name="footsteps_player" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9571409, 0)

[node name="footsteps_delay" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_lvxji")

[node name="menu_container" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -160.0
offset_right = 125.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/menu_container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/menu_container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="resume" type="Button" parent="UI/menu_container/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="options" type="Button" parent="UI/menu_container/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="exit" type="Button" parent="UI/menu_container/VBoxContainer"]
layout_mode = 2
text = "To main menu"

[node name="DialogueNode" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_gmlin")
metadata/_custom_type_script = "uid://ya240urtqqhp"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_dovo2")

[connection signal="pressed" from="UI/menu_container/VBoxContainer/resume" to="UI" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/menu_container/VBoxContainer/options" to="UI" method="_on_options_pressed"]
[connection signal="pressed" from="UI/menu_container/VBoxContainer/exit" to="UI" method="_on_exit_pressed"]
